create databasehelper and userhelper. in userhelper method insert to database created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Game Center</string>
 
     <string-array name="strArrRole">
-        <item>Please choose your role</item>
+        <item>Please choose your status</item>
         <item>Student</item>
         <item>Employee</item>
         <item>Freelancer</item>
